--- a/html/email-confirmation.html
+++ b/html/email-confirmation.html
@@ -25,7 +25,7 @@ Confirm My Account
                 </button>
             </div>
         </main>
-        <footer>
+        <footer style="display:none">
             <div class="footer-inner">
             <ul class="social-footer">
                 <li><a href="" class="social-footer--twitter-ico"></a></li>
