--- a/html/welcome-page.html
+++ b/html/welcome-page.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </main>
-        <footer>
+        <footer style="display:none">
             <div class="footer-inner">
                 <ul class="social-footer">
                     <li><a href="" class="social-footer--twitter-ico"></a></li>
