--- a/html/create-business-entity__step1.html
+++ b/html/create-business-entity__step1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <aside class="aside-main-nav">
@@ -106,7 +106,7 @@
     </header>
     <main>
         <article class="entity-create__steps--outer">
-        <h1 class="step-title"><i class="material-icons left"><img src="/images/business-create-ico.png" alt=""></i>Create New Business Entity</h1>
+        <h1 class="step-title"><i class="material-icons left"><img src="../images/business-create-ico.png" alt=""></i>Create New Business Entity</h1>
         <div class="entity-create__steps">
             <section class="steps-header">
                 <ul>
