--- a/html/email-confirmation.html
+++ b/html/email-confirmation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Email Confirmation</title>
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
     <article class="email-confirmation-bg">
