--- a/html/entities_empty.html
+++ b/html/entities_empty.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <aside class="aside-main-nav">
@@ -109,7 +109,7 @@
             <h2>You have no Entities to manage, it is time to create your Entities</h2>
             <section class="create-entity">
                 <div class="entity-logo freelancer left">
-                    <img src="/images/create-freelance-ico.png" alt="">
+                    <img src="../images/create-freelance-ico.png" alt="">
                 </div>
                 <div class="left entity-description">
                     <h4>Create Your Freelancer Entity</h4>
@@ -121,7 +121,7 @@
             </section>
             <section class="create-entity">
                 <div class="entity-logo freelancer left">
-                    <img src="/images/business-create-ico.png" alt="">
+                    <img src="../images/business-create-ico.png" alt="">
                 </div>
                 <div class="left entity-description">
                     <h4>Create Your Business Entity</h4>
