--- a/html/entities_freelance-empty.html
+++ b/html/entities_freelance-empty.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <aside class="aside-main-nav">
@@ -108,7 +108,7 @@
         <div class="ent-inner-col list-of-entities">
             <section class="create-entity">
                 <div class="entity-logo freelancer left">
-                    <img src="/images/create-freelance-ico.png" alt="">
+                    <img src="../images/create-freelance-ico.png" alt="">
                 </div>
                 <div class="left entity-description">
                     <h4>Create Your Freelancer Entity</h4>
@@ -126,7 +126,7 @@
                 <div class="business-entity-outer ">
                     <section class="business-entity__item creation-entity">
                         <section class="create-entity-logo left">
-                            <img src="/images/apple-logo.png" alt="">
+                            <img src="../images/apple-logo.png" alt="">
                         </section>
                         <section class="left entity-description">
                             <h4 class="marg-t">My Entity #2</h4>
@@ -163,7 +163,7 @@
                     </section>
                     <section class="business-entity__item creation-entity">
                         <section class="create-entity-logo left">
-                            <img src="/images/apple-logo.png" alt="">
+                            <img src="../images/apple-logo.png" alt="">
                         </section>
                         <section class="left entity-description">
                             <h4 class="marg-t">My Entity #1</h4>
