--- a/html/entities_list.html
+++ b/html/entities_list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <aside class="aside-main-nav">
@@ -110,7 +110,7 @@
             <h5 class="light">My Freelancer Entity</h5>
             <section class="creation-entity">
                 <section class="create-entity-logo left">
-                    <img src="/images/apple-logo.png" alt="">
+                    <img src="../images/apple-logo.png" alt="">
                 </section>
                 <section class="left entity-description">
                     <h4>George Thomas Washington</h4>
@@ -151,7 +151,7 @@
                 <div class="business-entity-outer ">
                 <section class="business-entity__item creation-entity">
                     <section class="create-entity-logo left">
-                        <img src="/images/apple-logo.png" alt="">
+                        <img src="../images/apple-logo.png" alt="">
                     </section>
                     <section class="left entity-description">
                         <h4 class="marg-t">My Entity #2</h4>
@@ -188,7 +188,7 @@
                 </section>
                     <section class="business-entity__item creation-entity">
                         <section class="create-entity-logo left">
-                            <img src="/images/apple-logo.png" alt="">
+                            <img src="../images/apple-logo.png" alt="">
                         </section>
                         <section class="left entity-description">
                             <h4 class="marg-t">My Entity #1</h4>
