--- a/html/freelancer/view-freelancer.html
+++ b/html/freelancer/view-freelancer.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../../sass/style.css">
 </head>
 <body>
 <aside class="aside-main-nav">
@@ -106,24 +106,24 @@
     </header>
     <main>
         <article class="entity-create__steps--outer">
-            <h1 class="step-title"><i class="material-icons left"><img src="/images/freelancer-create-ico.png" alt=""></i>Browse Freelancer</h1>
+            <h1 class="step-title"><i class="material-icons left"><img src="../../images/freelancer-create-ico.png" alt=""></i>Browse Freelancer</h1>
             <div class="freelancer-profile full-w left">
                 <section class="freelancer-info full-w left">
 
                     <div class="freealncer-logo left">
-                        <img src="/images/user-logo.jpg" alt="">
+                        <img src="../../images/user-logo.jpg" alt="">
                         <div class="user-okay">
-                            <img src="/images/user-okay.png" width="16" height="16" alt="">
+                            <img src="../../images/user-okay.png" width="16" height="16" alt="">
                         </div>
                         <div class="user-okay hide">
-                            <img src="/images/user-not-okay.png" alt="">
+                            <img src="../../images/user-not-okay.png" alt="">
                         </div>
                     </div>
                     <div class="freelancer-description left">
                         <div class="full-w left">
                             <h2 class="left">David Brotherhood</h2>
                             <i class="left">
-                                <img src="/images/active-user-lvl.png"  width="13" height="16"  alt="">
+                                <img src="../../images/active-user-lvl.png"  width="13" height="16"  alt="">
                             </i>
                         </div>
                     <h3>IT Developer</h3>
