--- a/html/identity-created.html
+++ b/html/identity-created.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Identiity created</title>
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <div class="confirm-bg">
