--- a/html/user-registration.html
+++ b/html/user-registration.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Registration</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <article class="registration-bg">
@@ -67,7 +67,7 @@
                 <label for="letter-reg">Type the Letters Below</label>
             </div>
             <div class="recaptcha">
-                <img src="/images/re-captcha.jpg" alt="">
+                <img src="../images/re-captcha.jpg" alt="">
             </div>
             <p>
                 <input type="checkbox" id="checkbox-reg" />
