--- a/html/welcome-back-page.html
+++ b/html/welcome-back-page.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <section class="main-header hide">
-    <section class="main-logo left"><img src="/images/semilimes-logo.png" alt=""></section>
+    <section class="main-logo left"><img src="../images/semilimes-logo.png" alt=""></section>
     <div class="right">
         <div class="button-relative-col left">
             <button type="submit" class="white-text">
