--- a/html/welcome-page.html
+++ b/html/welcome-page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Welcome to Semilimes</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
     <article class="welcome-page-bg">
