--- a/html/freelancer/create-freelance-entity-step3_2.html
+++ b/html/freelancer/create-freelance-entity-step3_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../../sass/style.css">
 </head>
 <body>
 <aside class="aside-main-nav">
@@ -106,7 +106,7 @@
     </header>
     <main>
         <article class="entity-create__steps--outer">
-            <h1 class="step-title"><i class="material-icons left"><img src="/images/freelancer-create-ico.png" alt=""></i>Create Freelancer Entity</h1>
+            <h1 class="step-title"><i class="material-icons left"><img src="../../images/freelancer-create-ico.png" alt=""></i>Create Freelancer Entity</h1>
 
             <div class="entity-create__steps step_three step_four">
                 <section class="steps-header freelance-steps">
