--- a/html/login-form.html
+++ b/html/login-form.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Registration</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <section class="main-header">
-    <section class="main-logo left"><img src="/images/semilimes-logo.png" alt=""></section>
+    <section class="main-logo left"><img src="../images/semilimes-logo.png" alt=""></section>
 </section>
 <article class="registration-bg login-page">
     <main>
