--- a/html/view-company.html
+++ b/html/view-company.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Entities</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../sass/style.css">
 </head>
 <body>
 <aside class="aside-main-nav">
@@ -106,12 +106,12 @@
     </header>
     <main>
         <article class="entity-create__steps--outer">
-            <h1 class="step-title"><i class="material-icons left"><img src="/images/business-create-ico.png" alt=""></i>Browse companies</h1>
+            <h1 class="step-title"><i class="material-icons left"><img src="../images/business-create-ico.png" alt=""></i>Browse companies</h1>
                 <section class="ent-inner-col view-company-content">
                     <section class="company-title full-w left">
                         <div class="company-outer">
                         <div class="company-logo left">
-                            <img src="/images/apple-logo.png" width="36" height="43" alt="">
+                            <img src="../images/apple-logo.png" width="36" height="43" alt="">
                         </div>
                         <div class="company-description left">
                             <h5>
